--- a/src/scss/component/cover.scss
+++ b/src/scss/component/cover.scss
@@ -1,12 +1,32 @@
+@import "~scss/_vars";
+
 .cover { 
 	background-repeat: no-repeat; background-size: cover; background-position: top center; color: #fff; position: fixed; left: 0px; 
 	top: 0px; width: 100%; height: 100%;
 }
 
-.cover.c1 { background-image: url('~img/cover/1.jpg'); }
-.cover.c2 { background-image: url('~img/cover/2.jpg'); }
-.cover.c3 { background-image: url('~img/cover/3.jpg'); }
-.cover.c4 { background-image: url('~img/cover/4.jpg'); }
-.cover.c5 { background-image: url('~img/cover/5.jpg'); }
-.cover.c6 { background-image: url('~img/cover/6.jpg'); }
-.cover.c7 { background-image: url('~img/cover/7.jpg'); }
+.cover.type0.c1 { background-image: url('~img/cover/1.jpg'); }
+.cover.type0.c2 { background-image: url('~img/cover/2.jpg'); }
+.cover.type0.c3 { background-image: url('~img/cover/3.jpg'); }
+.cover.type0.c4 { background-image: url('~img/cover/4.jpg'); }
+.cover.type0.c5 { background-image: url('~img/cover/5.jpg'); }
+.cover.type0.c6 { background-image: url('~img/cover/6.jpg'); }
+.cover.type0.c7 { background-image: url('~img/cover/7.jpg'); }
+
+.cover.type1.yellow { background: $colorYellow; }
+.cover.type1.orange { background: $colorOrange; }
+.cover.type1.red { background: $colorRed; }
+.cover.type1.pink { background: $colorPink; }
+.cover.type1.purple { background: $colorPurple; }
+.cover.type1.blue { background: $colorBlue; }
+.cover.type1.ice { background: $colorIce; }
+.cover.type1.teal { background: $colorTeal; }
+.cover.type1.green { background: $colorLime; }
+.cover.type1.lightgrey { background: $colorLightGrey; }
+.cover.type1.darkgrey { background: $colorDarkGrey; }
+.cover.type1.black { background: $colorBlack; }
+		
+.cover.type2.yellow { background: linear-gradient(180deg, $colorOrange 0%, $colorYellow 105.47%); }
+.cover.type2.red { background: linear-gradient(180deg, $colorRed 0%, $colorPink 105.47%); }
+.cover.type2.blue { background: linear-gradient(180deg, $colorPurple 0%, $colorBlue 105.47%); }
+.cover.type2.teal { background: linear-gradient(180deg, $colorIce 0%, $colorTeal 105.47%); }
