cover drag fixes

--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -6,12 +6,12 @@
 	.wrapContent { position: relative; z-index: 1; width: 100%; height: 100%; }
 	
 	.wrap { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
-	.wrap.isDragging { cursor: move; }
+	.wrap.isDragging, .wrap.isEditing { cursor: grab; }
 	.wrap.isDragging {
-		.elements { opacity: 0; }
+		.elements { opacity: 0.5; }
 	}
 	
-	.cover { position: absolute; background-size: 100% auto; background-position: 50% 50%; }
+	.cover { position: absolute; background-size: 100% auto; background-position: 0% 0%; }
 	.elements { width: 704px; height: calc(100% - 40px); position: absolute; left: 50%; margin-left: -352px; bottom: 0px; z-index: 1; }
 	.elements:hover { 
 		.btn { opacity: 1 !important; }
@@ -47,7 +47,7 @@
 			.txt { line-height: 18px; }
 		}
 		
-		.btn.drag { position: absolute; cursor: move; width: 196px; top: 50%; left: 50%; margin: -12px 0px 0px -98px; }
+		.btn.drag { position: absolute; cursor: grab; width: 196px; top: 50%; left: 50%; margin: -12px 0px 0px -98px; }
 		.btn.drag {
 			.icon { background-image: url('~img/icon/cover/drag.svg'); }
 		}
