--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -5,13 +5,20 @@
 	.wrapMenu { display: none; }
 	.wrapContent { position: relative; z-index: 1; width: 100%; height: 100%; }
 	
-	.wrap { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
+	.wrap { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; overflow: hidden; }
 	.wrap.isDragging, .wrap.isEditing { cursor: grab; }
+	
+	.wrap.isEditing {
+		.elements { opacity: 1; }
+		.elements { 
+			.btn { opacity: 1 !important; }
+		}
+	} 
 	.wrap.isDragging {
 		.elements { opacity: 0.5; }
 	}
 	
-	.cover { position: absolute; background-size: 100% auto; background-position: 0% 0%; }
+	.cover { position: absolute; height: auto; transform-origin: 0px 0px; }
 	.elements { width: 704px; height: calc(100% - 40px); position: absolute; left: 50%; margin-left: -352px; bottom: 0px; z-index: 1; }
 	.elements:hover { 
 		.btn { opacity: 1 !important; }
