--- a/src/scss/block/cover.scss
+++ b/src/scss/block/cover.scss
@@ -18,7 +18,8 @@
 		.elements { opacity: 0.5; }
 	}
 	
-	.cover { position: absolute; height: auto; transform-origin: 0px 0px; }
+	.cover { position: static; transform-origin: 0px 0px; }
+	img.cover { height: auto; }
 	.elements { width: 704px; height: calc(100% - 40px); position: absolute; left: 50%; margin-left: -352px; bottom: 0px; z-index: 1; }
 	.elements:hover { 
 		.btn { opacity: 1 !important; }
