--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -10,6 +10,8 @@ html.debug {
 		.block.blockLayout.c0 { border-color: rgba(0,255,0,0.3); }
 		.block.blockLayout.c0  > .wrapContent > .dropTarget { background: rgba(0,0,255,0.1); }
 		.block.blockLayout.c1 { border-color: rgba(0,0,255,0.3); }
+		
+		.block.blockLayout.c2 { border-width: 2px; border-color: rgba(0,255,0,0.3); }
 	}
 	
 	.blockLast { background: rgba(0,0,255,0.1); }
