--- a/src/scss/component/progress.scss
+++ b/src/scss/component/progress.scss
@@ -11,11 +11,11 @@
 .progress {
 	.inner { 
 		position: absolute; left: 50%; top: 50%; box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.3); height: 40px; line-height: 40px;
-		border-radius: 4px; width: 224px; text-align: center; background: #393834; overflow: hidden; margin: -20px 0px 0px -112px;
+		border-radius: 4px; width: 350px; text-align: center; background: #393834; overflow: hidden; margin: -20px 0px 0px -175px;
 		transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out;
 	}
 	.inner {
-		.label { position: absolute; left: 0px; top: 0px; width: 100%; z-index: 1; color: #fff; }
+		.label { position: absolute; left: 0px; top: 0px; width: 100%; z-index: 1; color: #fff; white-space: nowrap; }
 		.bar { background: #6a6962; height: 100%; position: absolute; left: 0px; top: 0px; }
 	}
 	
