--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -1,9 +1,10 @@
-.dragLayer { position: fixed; z-index: 1000; left: -10000px; top: -10000px; }
+.dragLayer { position: fixed; z-index: 1000; left: -10000px; top: -10000px; background: #fff; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2); }
 .dragLayer {
 	.blocks { margin: 0px !important; }
 	.blocks {
-		.block { background: #fff; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2); border: 0px; width: 100% !important; }
+		.block { border: 0px; width: 100% !important; }
 		.block {
+			.wrapMenu { display: none; }
 			.children {
 				.block { box-shadow: 0px 0px; }
 			}
