--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -2,11 +2,15 @@
 .dragLayer {
 	.blocks { margin: 0px !important; }
 	.blocks {
-		.block { border: 0px; width: 100% !important; padding: 0px 4px; }
+		.block { border: 0px; width: 100% !important; padding-left: 4px; }
 		.block {
 			.wrapMenu { display: none; }
+			.wrapContent { width: 100%; }
+			
 			.children {
-				.block { box-shadow: 0px 0px; }
+				.block { box-shadow: 0px 0px; padding: 0px; }
+				.wrapMenu { display: block; }
+				.wrapContent { width: calc(100% - 46px); }
 			}
 		}
 	}
