--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -26,7 +26,7 @@
 
 	.path { white-space: nowrap; }
 	.path {
-		.item { display: inline-block; vertical-align: middle; color: #6c6a5f; margin-right: 4px; cursor: pointer; }
+		.item { display: inline-block; vertical-align: middle; color: #6c6a5f; margin-right: 4px; cursor: pointer; transition: $transitionFast; }
 		.item {
 			.icon.home { margin-right: 4px; }
 			.icon.arrow { width: 6px; height: 10px; padding-top: 2px; background-image: url('~img/arrow/path.svg'); }
@@ -36,14 +36,13 @@
 		.item:last-child {
 			.icon.arrow { display: none; }
 		}
+		.item:hover { color: $colorBlack; }
 	}
 
 	.icon.plus-edit { cursor: pointer; width: 24px; height: 24px; margin-right: 4px; background-image: url('~img/icon/plus/edit0.svg'); }
 	.icon.plus-edit:hover { background-image: url('~img/icon/plus/edit1.svg'); }
 
-	.icon.back, .icon.forward {
-		width: 24px; height: 24px; margin-right: 4px; background-image: url('~img/icon/back0.svg'); cursor: pointer;
-	}
+	.icon.back, .icon.forward { width: 24px; height: 24px; margin-right: 4px; background-image: url('~img/icon/back0.svg'); cursor: pointer; }
 	.icon.forward { transform: rotateZ(180deg); }
 	.icon.back:hover, .icon.forward:hover { background-image: url('~img/icon/back1.svg'); }
 }
@@ -53,5 +52,6 @@
 	.menu { top: 8px; right: 12px; }
 	.menu {
 		.icon.more { width: 24px; height: 24px; background-image: url('~img/icon/menu/action/more0.svg'); cursor: pointer; }
+		.icon.more:hover { background-image: url('~img/icon/menu/action/more1.svg'); }
 	}
 }
