--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -11,7 +11,10 @@
 .icon.search { width: 24px; height: 24px; background-image: url('~img/icon/search.svg'); }
 
 .icon.help { width: 22px; height: 22px; background-image: url('~img/icon/help/dark0.svg'); }
+.icon.help:hover { width: 22px; height: 22px; background-image: url('~img/icon/help/dark1.svg'); }
+
 .icon.help.light { background-image: url('~img/icon/help/light0.svg'); }
+.icon.help.light:hover { background-image: url('~img/icon/help/light0.svg'); }
 
 .icon.property.c0 { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/property/light/title.svg'); }
 .icon.property.c1 { width: 14px; height: 12px; background-image: url('~img/icon/block/dataview/property/light/text.svg'); }
