--- a/src/scss/block/title.scss
+++ b/src/scss/block/title.scss
@@ -3,7 +3,10 @@
 .blocks {
 	.block.blockTitle { padding: 12px 0px 24px 0px; font-size: 36px; line-height: 40px; letter-spacing: -0.72px; font-weight: 600; }
 	.block.blockTitle {
-		.input { padding: 0px; font-size: inherit; line-height: inherit; letter-spacing: inherit; font-weight: inherit; height: auto; }
+		.placeHolder { 
+			color: $colorDarkGrey; position: absolute; z-index: 0; left: 0px; top: 0px; display: none; overflow: hidden; 
+			width: 100%; height: 100%; cursor: text; 
+		}
 	}
 	.block.blockTitle > .wrapContent > .selectable > .dropTarget { padding: 3px 0px 2px 0px; }
 	.block.blockTitle > .wrapMenu { visibility: hidden; }
