--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -8,7 +8,7 @@
 		
 		.name {
 			min-width: 40px; max-width: calc(100% - 180px); height: 22px; line-height: 22px; display: inline-block; overflow: hidden;
-			vertical-align: top; padding-top: 1px; cursor: pointer;
+			vertical-align: top; padding-top: 1px; cursor: pointer; text-overflow: ellipsis;
 		}
 		.size {
 			max-width: 100px; font-size: 13px; height: 22px; line-height: 22px; letter-spacing: 0.1px; color: $colorDarkGrey; margin: 0px 8px;
