--- a/src/scss/block/bookmark.scss
+++ b/src/scss/block/bookmark.scss
@@ -26,9 +26,18 @@
 			.img { background-position: center center; }
 		}
 
-		.name { font-size: 15px; line-height: 20px; height: 20px; letter-spacing: -0.08px; color: $colorBlack; overflow: hidden; text-overflow: ellipsis; }
-		.descr { font-size: 13px; line-height: 18px; height: 36px; letter-spacing: 0.08px; color: #6c6a5f; overflow: hidden; text-overflow: ellipsis; margin: 2px 0px 5px 0px; }
-		.link { font-size: 13px; line-height: 18px; height: 18px; letter-spacing: 0.08px; color: $colorBlack; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+		.name { 
+			font-size: 15px; line-height: 20px; height: 20px; letter-spacing: -0.08px; color: $colorBlack; overflow: hidden; 
+			text-overflow: ellipsis; white-space: nowrap; 
+		}
+		.descr { 
+			font-size: 13px; line-height: 18px; height: 36px; letter-spacing: 0.08px; color: #6c6a5f; overflow: hidden; 
+			text-overflow: ellipsis; margin: 2px 0px 5px 0px; 
+		}
+		.link { 
+			font-size: 13px; line-height: 18px; height: 18px; letter-spacing: 0.08px; color: $colorBlack; overflow: hidden; 
+			text-overflow: ellipsis; white-space: nowrap; 
+		}
 		
 		.img {
 			width: 100%; height: 100%; background-repeat: no-repeat; background-image: url('~img/blank/bookmark.png');
