--- a/src/scss/block/bookmark.scss
+++ b/src/scss/block/bookmark.scss
@@ -27,16 +27,16 @@
 		}
 
 		.name { 
-			font-size: 15px; line-height: 20px; height: 20px; letter-spacing: -0.08px; color: $colorBlack; overflow: hidden; 
-			text-overflow: ellipsis; white-space: nowrap; 
+			font-size: 15px; line-height: 20px; height: 20px; letter-spacing: -0.08px; color: $colorBlack; 
+			@include text-overflow-nw;  
 		}
 		.descr { 
-			font-size: 13px; line-height: 18px; height: 36px; letter-spacing: 0.08px; color: #6c6a5f; overflow: hidden; 
-			text-overflow: ellipsis; margin: 2px 0px 5px 0px; 
+			font-size: 13px; line-height: 18px; height: 36px; letter-spacing: 0.08px; color: #6c6a5f; margin: 2px 0px 5px 0px;
+			@include text-overflow;
 		}
 		.link { 
-			font-size: 13px; line-height: 18px; height: 18px; letter-spacing: 0.08px; color: $colorBlack; overflow: hidden; 
-			text-overflow: ellipsis; white-space: nowrap; 
+			font-size: 13px; line-height: 18px; height: 18px; letter-spacing: 0.08px; color: $colorBlack; 
+			@include text-overflow-nw;   
 		}
 		
 		.img {
