--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -7,7 +7,7 @@
 		
 		.name {
 			min-width: 40px; max-width: calc(100% - 180px); height: 22px; line-height: 22px; display: inline-block;
-			vertical-align: top; padding-top: 1px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
+			vertical-align: top; padding-top: 1px; cursor: pointer; @include text-overflow-nw;  
 		}
 		.size {
 			max-width: 100px; font-size: 13px; height: 22px; line-height: 22px; letter-spacing: 0.1px; color: $colorDarkGrey; margin: 0px 8px;
@@ -34,6 +34,6 @@
 		.download { opacity: 1; }
 	}
 	
-	.block.blockFile > .wrapContent > .selectable > .dropTarget { white-space: nowrap; overflow: hidden; }
+	.block.blockFile > .wrapContent > .selectable > .dropTarget { @include text-overflow-nw;  }
 	.block.blockFile > .wrapContent > .selectable > .dropTarget { padding-top: 4px; padding-bottom: 2px; }
 }
