--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -7,8 +7,8 @@
 		.icon.plus.dark { background-image: url('~img/icon/block/dataview/plus/dark0.svg'); }
 		.icon.plus.dark:hover { background-image: url('~img/icon/block/dataview/plus/dark1.svg'); }
 		
-		.icon.checkBox { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/bool0.svg'); }
-		.icon.checkBox.active { background-image: url('~img/icon/block/dataview/bool1.svg'); }
+		.icon.checkbox { width: 14px; height: 14px; background-image: url('~img/icon/block/dataview/bool0.svg'); }
+		.icon.checkbox.active { background-image: url('~img/icon/block/dataview/bool1.svg'); }
 		
 		.views { font-size: 18px; line-height: 26px; letter-spacing: -0.08px; color: $colorDarkGrey; font-weight: bold; margin-bottom: 16px; }
 		.views {
