--- a/src/scss/popup/feedback.scss
+++ b/src/scss/popup/feedback.scss
@@ -8,7 +8,10 @@
 		.input { height: 40px; border: 1px solid #DFDDD0; padding: 0px 16px; }
 		.textarea { height: 160px; padding: 16px; border: 1px solid #DFDDD0; background: none; font-family: 'Lcg'; }
 		
-		.row { display: flex; margin-bottom: 16px; }
+		.icon.checkbox { margin: -2px 8px 0px 0px; }
+		
+		.row { margin-bottom: 16px; }
+		.row:last-child { margin: 0px; }
 		.row {
 			.input { margin-right: 16px; }
 			.input:last-child { margin: 0px; }
