--- a/src/scss/block/iconPage.scss
+++ b/src/scss/block/iconPage.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .blocks {
-	.block.blockIcon {
+	.block.blockIconPage {
 		.smile { position: relative; z-index: 2; }
 	}
 }
