--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -56,6 +56,7 @@
 }
 .icon.user.c18 { width: 18px; height: 18px; line-height: 18px; font-size: 11px; }
 .icon.user.c40 { width: 40px; height: 40px; line-height: 40px; font-size: 18px; }
+.icon.user.c96 { width: 96px; height: 96px; line-height: 96px; font-size: 44px; font-weight: 500; }
 
 .icon.user {
 	.txt { line-height: inherit; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 1; }
