--- a/src/scss/component/cover.scss
+++ b/src/scss/component/cover.scss
@@ -5,13 +5,24 @@
 	top: 0px; width: 100%; height: 100%;
 }
 
-.cover.type1.c1 { background-image: url('~img/cover/1.jpg'); }
-.cover.type1.c2 { background-image: url('~img/cover/2.jpg'); }
-.cover.type1.c3 { background-image: url('~img/cover/3.jpg'); }
-.cover.type1.c4 { background-image: url('~img/cover/4.jpg'); }
-.cover.type1.c5 { background-image: url('~img/cover/5.jpg'); }
-.cover.type1.c6 { background-image: url('~img/cover/6.jpg'); }
-.cover.type1.c7 { background-image: url('~img/cover/7.jpg'); }
+.cover.type1.c1 { background-color: #FEE874; }
+.cover.type1.c2 { background-color: #FFB522; }
+.cover.type1.c3 { background-color: #EFAEA1; }
+.cover.type1.c4 { background-color: #F55522; }
+.cover.type1.c5 { background-color: #6A1036; }
+.cover.type1.c6 { background-color: #132877; }
+.cover.type1.c7 { background-color: #2869E9; }
+.cover.type1.c8 { background-color: #88CDF3; }
+.cover.type1.c9 { background-color: #9BB0B7; }
+.cover.type1.c10 { background-color: #136E41; }
+
+.cover.type1.c11 { background-image: url('~img/cover/1.jpg'); }
+.cover.type1.c12 { background-image: url('~img/cover/2.jpg'); }
+.cover.type1.c13 { background-image: url('~img/cover/3.jpg'); }
+.cover.type1.c14 { background-image: url('~img/cover/4.jpg'); }
+.cover.type1.c15 { background-image: url('~img/cover/5.jpg'); }
+.cover.type1.c16 { background-image: url('~img/cover/6.jpg'); }
+.cover.type1.c17 { background-image: url('~img/cover/7.jpg'); }
 
 .cover.type2.yellow { background: $colorYellow; }
 .cover.type2.orange { background: $colorOrange; }
