--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -7,17 +7,21 @@
 	
 		.icon { transition: none; }
 	
-		.icon.close { width: 16px; height: 16px; cursor: pointer; background-image: url('~img/icon/popup/close0.svg'); margin-bottom: 24px; }
-		.icon.close:hover { background-image: url('~img/icon/popup/close1.svg'); }
-		
-		.icon.back { width: 10px; height: 16px; cursor: pointer; background-image: url('~img/icon/popup/back0.svg'); margin-bottom: 24px; }
-		.icon.back:hover { background-image: url('~img/icon/popup/back1.svg'); }
-		
 		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; margin-bottom: 15px; }
 		.inputs { margin-bottom: 32px; }
 		
-		.tab { padding: 48px; }
+		.head { position: absolute; left: 0px; top: 0px; width: 100%; height: 40px; padding: 10px 12px; }
+		.head {
+			.icon.back { width: 24px; height: 24px; cursor: pointer; background-image: url('~img/icon/popup/settings/back0.svg'); margin-top: -2px; }
+			
+			.element { color: #6c6a5f; cursor: pointer; }
+			.element:hover { color: $colorBlack; }
+			.element:hover {
+				.icon.back { background-image: url('~img/icon/popup/settings/back1.svg'); } 
+			}
+		}
 		
+		.tab { padding: 70px 48px 48px 48px; }
 		.tabIndex {
 			.rows { margin-bottom: 20px; }
 			.row { padding: 22px 0px; border-bottom: 1px solid #eae9e0; cursor: pointer; position: relative; }
@@ -75,10 +79,10 @@
 		
 		.tabPhrase {
 			.label { margin-bottom: 25px; }
-			.textarea { border-radius: 4px; padding: 24px 32px; }
+			.textarea { border-radius: 4px; padding: 24px 32px; color: $colorIce; }
 		}
 		
-		.tabPinSelect, .tabPinConfirm {
+		.tabPinIndex, .tabPinSelect, .tabPinConfirm {
 			.label { margin-bottom: 25px; }
 			.input { 
 				width: 40px; height: 40px; margin-right: 8px; padding: 0px; text-align: center; vertical-align: top; font-size: 18px;
@@ -87,6 +91,11 @@
 			.input.active { box-shadow: 0px 0px 0px 1px $colorOrange inset; border-color: $colorOrange; }
 			.input-password { font-size: 36px; }
 			.input:last-child { margin: 0px; }
+			
+			.button { 
+				padding: 20px 0px; width: 100%; display: block; height: auto; line-height: 24px; background: none; color: #e89d00;
+				border-bottom: 1px solid #eae9e0;
+			}
 		}
 
 	}
