--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -7,7 +7,7 @@
 	
 		.icon { transition: none; }
 	
-		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; margin-bottom: 15px; }
+		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; margin-bottom: 16px; }
 		.inputs { margin-bottom: 32px; }
 		
 		.head { position: absolute; left: 0px; top: 0px; width: 100%; height: 40px; padding: 10px 12px; }
@@ -84,8 +84,12 @@
 			.textarea { border-radius: 4px; padding: 24px 32px; color: $colorIce; }
 		}
 		
-		.tabPinIndex, .tabPinSelect, .tabPinConfirm {
+		.tabPinIndex {
 			.label { margin-bottom: 25px; }
+		}
+		
+		.tabPinIndex, .tabPinSelect, .tabPinConfirm {
+			.label { margin-bottom: 10px; }
 			.input { 
 				width: 40px; height: 40px; margin-right: 8px; padding: 0px; text-align: center; vertical-align: top; font-size: 18px;
 				border: 1px solid #e0ded2; 
