--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -10,7 +10,7 @@
 		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; margin-bottom: 16px; }
 		.inputs { margin-bottom: 32px; }
 		
-		.head { position: absolute; left: 0px; top: 0px; width: 100%; height: 40px; padding: 10px 12px; }
+		.head { position: absolute; left: 0px; top: 0px; width: 100%; height: 40px; padding: 10px 12px; background: #fff; z-index: 1; }
 		.head {
 			.icon.back { width: 24px; height: 24px; cursor: pointer; background-image: url('~img/icon/popup/settings/back0.svg'); margin-top: -2px; }
 			
