--- a/src/scss/block/iconUser.scss
+++ b/src/scss/block/iconUser.scss
@@ -2,6 +2,6 @@
 
 .blocks {
 	.block.blockIconUser {
-		.icon.user { position: relative; z-index: 2; }
+		.icon.user { position: relative; z-index: 2; cursor: pointer; }
 	}
 }
